final commit. site functional and styled.

--- a/app/index.html
+++ b/app/index.html
@@ -39,9 +39,11 @@
 
 <footer>
 
+<h2 class="footSpan">Vintage Guitar Guide, LLC.</h2>
+
   <div class="socMed">
-    <i class="fa fa-facebook"></i>
-    <i class="fa fa-twitter"></i>
+    <i class="fa fa-facebook"></i> |
+    <i class="fa fa-twitter"></i> |
     <i class="fa fa-instagram"></i>
   </div>
 
