--- a/app/js/add.tpl.html
+++ b/app/js/add.tpl.html
@@ -1,6 +1,9 @@
-<h2>Add a Guitar to Our List</h2>
+<br>
+<br>
+<h2 class="addGeet">Add a Guitar to Our List</h2>
 
-<form ng-submit="addGuit(g)">
+
+<form class="column" ng-submit="addGuit(g)">
   <input ng-model="g.img" type="text" placeholder="Image URL">
   <input ng-model="g.brand" type="text" placeholder="Brand">
   <input ng-model="g.model" type="text" placeholder="Model">
@@ -8,7 +11,7 @@
   <input ng-model="g.price" type="text" placeholder="Price">
 
 
-  <button>Add Git Fiddle</button>
+  <button>Add New Guitar</button>
 </form>
 
 
