--- a/app/js/single.tpl.html
+++ b/app/js/single.tpl.html
@@ -1,12 +1,12 @@
-<h3>{{ g.year }} {{ g.brand }} {{ g.model }}</h3>
-
+<h3 class="wowzer">{{ g.year }} {{ g.brand }} {{ g.model }}</h3>
+<h4 class="yayzer">Price : {{g.price}}</h4>
 
 
 <div class="imgCard">
   <div class="dark card">
-    <img src="{{ g.img }}">
+    <img class="geetar" src="{{ g.img }}">
       <div class="card-divider">
-      <span>Price : {{g.price}}</span> <span ng-click="deleteMe(g.objectId)" id="delete">X</span>
+       <span ng-click="deleteMe(g.objectId)" id="delete">Delete this Post</span>
       </div>
   <div class="card-section">
   </div>
